# static_modular_exponent

./: CMakeLists.txt  README.md  run.sh
include/: static_modexp.hpp
src/: main.cpp  static_modexp.hpp  test.cpp  test_base_nok.cpp  test_modulus_nok.cpp  test_ok.cpp  test_power_nok.cpp
